[package]
name = "BitstampClient"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bitstamp"
path = "src/main.rs"

[dependencies]
url = { version = "2.5.4", features = ["serde"] }
pretty_env_logger = "0.5.0"
log = "^0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "^1.0"
ureq = { version = "^3.0", features = ["json"] }
clap = { version= "^4.5", features = ["default", "derive"] }
